--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,20 +13,20 @@
 </header>
 
 <div class='main'>
-  <div class="image-container">
+  <div class='image-container'>
     <%= image_tag "Beta Key Art_VALORANT.jpg", class:"image" %>
     <div class='caption'>共に戦う仲間を見つけよう！</div>
     <div class='container-btn'>
-      <div class='sign-in-btn'>
-        <%= link_to 'ログイン', "#" %>
-      </div>
-      <div class='sign-up-btn'>
-        <%= link_to '新規登録', "#" %>
-      </div>
+      <%= link_to "#", class: 'sign-in-btn' do %>
+        <span class='btn-text'>ログイン</span>
+      <% end %>
+      <%= link_to "#", class: 'sign-up-btn' do %>
+        <span class='btn-text'>新規登録</span>
+      <% end %>
     </div>
   </div>
 
   <div class='post-contents'>
-    <h2 class='title'>募集一覧</h2>
+    <h1 class='title'>募集一覧</h1>
   </div>
 </div>
