--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,4 @@
-<header>
-  <div class='header-contents'>
-    <div class='logo'>
-      <%= link_to 'Soliciting of Agents', root_path %>
-    </div>
-    <div class='nav'>
-      <ul class='nav-lists'>
-        <li><%= link_to 'ログイン', "/users/sign_in", class: "nav-list" %></li>
-        <li><%= link_to '新規登録', "/users/sign_up", class: "nav-list" %></li>
-      </ul>
-    </div>
-  </div>
-</header>
+<%= render "shared/header" %>
 
 <div class='main'>
   <div class='image-container'>
