--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -39,8 +39,8 @@
     <%= f.password_field :password_confirmation, class:"input-default", placeholder:"同じパスワードを入力して下さい" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "新規登録",class:"actions-btn" %>
+  <div class="registration">
+    <%= f.submit "新規登録",class:"registration-btn" %>
   </div>
 </div>
 <% end %>
