--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -1,29 +1,42 @@
 .registration-main {
   width: 100%;
   min-width: 800px;
-  height: calc(100vh - 80px);
-  background-color: rgb(235,232,225);
+  height: 100%;
+  
   display: flex;
   justify-content: center;
 }
 
 .form-wrap {
-  width: 40%;
-  height: 750px;
-  background-color: white;
-  margin: auto 0;
+  width: 60%;
+  padding-bottom: 70px;
 }
 
 .form-header {
   width: 100%;
-  height: 120px;
   text-align: center;
+  margin: 50px 0;
 }
 
 .form-header-text {
-  line-height: 100px;
-  border-bottom: 1px solid #f5f5f5;
+  text-align: center;
+  font-size: 3.5vh;
+  font-weight: bold;
+  margin-bottom: 5vh;
+  position: relative;
 }
+
+.form-header>.form-header-text::after {
+  content: '';
+  width: 80px;
+  height: 4px;
+  background-color: rgb(254, 70, 85);
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 
 .form-group {
   width: 60%;
@@ -46,7 +59,7 @@
 .input-default {
   width: 100%;
   margin-top: 5px;
-  height: 40px;
+  height: 50px;
   padding: 10px 16px 8px;
   border-radius: 4px;
   border: 1px solid #ccc;
@@ -61,12 +74,12 @@
   margin-top: 3px;
 }
 
-.actions {
+.registration {
   width: 60%;
   margin: 0 auto;
 }
 
-.actions-btn {
+.registration-btn {
   width: 100%;
   background: rgb(254, 70, 85);
   border: 1px solid rgb(254, 70, 85);
