ログイン・サインアップ画面の作成

--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -26,7 +26,7 @@
   position: relative;
 }
 
-.form-header>.form-header-text::after {
+.form-header-text::after {
   content: '';
   width: 80px;
   height: 4px;
