--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
       <label class="form-text">ニックネーム</label>
       <span class="indispensable">必須</span>
     </div>
-    <%= f.text_area :nickname, class:"input-default", maxlength:"20" %>
+    <%= f.text_field :nickname, class:"input-default", maxlength:"20", autofocus: true %>
   </div>
 
   <div class="form-group">
@@ -20,7 +20,7 @@
       <label class="form-text">メールアドレス</label>
       <span class="indispensable">必須</span>
     </div>
-    <%= f.email_field :email, class:"input-default", autofocus: true %>
+    <%= f.email_field :email, class:"input-default" %>
   </div>
 
   <div class="form-group">
