--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
   <div class='form-header'>
     <h2 class='form-header-text'>新規登録</h2>
   </div>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= render "devise/shared/error_messages", model: f.object %>
 
   <div class="form-group">
     <div class='form-text-wrap'>
