投稿画面の作成

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,5 +18,6 @@
 
   <div class='post-contents'>
     <h1 class='title'>募集一覧</h1>
+    <%= link_to "投稿する", new_post_path, class:"post" %>
   </div>
 </div>
