--- a/app/assets/stylesheets/posts/index.css
+++ b/app/assets/stylesheets/posts/index.css
@@ -65,7 +65,7 @@
 
 .post-contents>.title {
   text-align: center;
-  font-size: 3.5vh;
+  font-size: 33px;
   font-weight: bold;
   margin-bottom: 5vh;
   position: relative;
