--- a/app/assets/stylesheets/posts/index.css
+++ b/app/assets/stylesheets/posts/index.css
@@ -61,6 +61,7 @@
 .post-contents {
   text-align: center;
   margin-top: 100px;
+  padding-bottom: 50px;
 }
 
 .post-contents>.title {
@@ -80,4 +81,69 @@
   bottom: -10px;
   left: 50%;
   transform: translateX(-50%);
+}
+
+.new-solicitation {
+  width: 50%;
+  height: 50px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.solicitation-btn {
+  height: 50px;
+  width: 100%;
+  background-color: rgb(254, 70, 85);
+  text-align: center;
+  border-radius: 5px;
+  border: 1px solid rgb(189,188,182);
+  text-decoration: none;
+  padding: 12px 20px;
+}
+
+.post-list {
+  display: flex;
+  background-color: #fff;
+  width: 50%;
+  min-width: 500px;
+  border-radius: 5px;
+  box-shadow: 3px 3px 5px 2px rgba(0, 0, 0, 0.2);
+  margin: 20px auto 0;
+  padding: 10px 10px;
+}
+
+.post-left {
+  width: 20%;
+  text-align: left;
+  padding-left: 10px;
+}
+
+.post-right {
+  width: 80%;
+  text-align: left;
+}
+
+.post-game-mode a {
+  background-color: rgb(254, 70, 85);
+  color: #fff;
+  font-size: 14px;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 4px 7px;
+  border-radius: 20px;
+}
+
+.post-content {
+  margin: 10px 0;
+  font-size: 15px;
+}
+
+.post-content a {
+  text-decoration: none;
+  color: black;
+}
+
+.post-datetime {
+  text-align: right;
+  font-size: 12px;
 }
