--- a/app/assets/stylesheets/posts/index.css
+++ b/app/assets/stylesheets/posts/index.css
@@ -102,25 +102,23 @@
 }
 
 .post-list {
-  display: flex;
   background-color: #fff;
   width: 50%;
   min-width: 500px;
   border-radius: 5px;
   box-shadow: 3px 3px 5px 2px rgba(0, 0, 0, 0.2);
   margin: 20px auto 0;
-  padding: 10px 10px;
+  padding: 10px 15px;
 }
 
-.post-left {
-  width: 20%;
-  text-align: left;
-  padding-left: 10px;
+.post-top {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.post-right {
-  width: 80%;
-  text-align: left;
+.post-game-mode {
+  margin-left: 5px;
 }
 
 .post-game-mode a {
@@ -133,8 +131,20 @@
   border-radius: 20px;
 }
 
+.post-user a {
+  text-decoration: none;
+  color: black;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.post-bottom {
+  width: 100%;
+  text-align: left;
+}
+
 .post-content {
-  margin: 10px 0;
+  margin: 10px 10px;
   font-size: 15px;
 }
 
