--- a/app/assets/stylesheets/posts/index.css
+++ b/app/assets/stylesheets/posts/index.css
@@ -86,6 +86,7 @@
 .new-solicitation {
   width: 50%;
   height: 50px;
+  min-width: 500px;
   margin: 0 auto;
   text-align: left;
 }
@@ -121,7 +122,7 @@
   margin-left: 5px;
 }
 
-.post-game-mode a {
+.game-mode-text {
   background-color: rgb(254, 70, 85);
   color: #fff;
   font-size: 14px;
@@ -148,7 +149,7 @@
   font-size: 15px;
 }
 
-.post-content a {
+.post-content-text {
   text-decoration: none;
   color: black;
 }
