--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -25,6 +25,7 @@
 
   <div class="post">
     <%= f.submit "投稿する",class:"post-btn" %>
+    <%=link_to 'もどる', root_path, class:"back-btn" %>
   </div>
 </div>
 <% end %>
