--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,7 +30,7 @@
     <% if user_signed_in? %>
       <% if current_user == @post.user %>
         <%= link_to "編集", edit_post_path, class: "post-edit" %>
-        <%= link_to "削除", "#", class:"post-destroy" %>
+        <%= link_to "削除", post_path, data: {turbo_method: :delete}, class:"post-destroy" %>
       <% end %>
     <% end %>
   </div>
