--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -33,7 +33,9 @@
               <% end %>
             </div>
             <div class='post-user'>
-              <a href="#"><%= post.user[:nickname] %></a>
+              <%= link_to user_path(post.user), class:"post-user-text" do %>
+                <%= post.user[:nickname] %>
+              <% end %>
             </div>
           </div>
           <div class='post-bottom'>
