--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
     <div class='nav'>
       <ul class='nav-lists'>
         <% if user_signed_in? %>
-          <li><%= link_to 'マイページ', "#", class: "nav-list" %></li>
+          <li><%= link_to 'マイページ', "/users/#{current_user.id}", class: "nav-list" %></li>
           <li><%= link_to 'ログアウト', "/users/sign_out", data: {turbo_method: :delete}, class: "nav-list" %></li>
         <% else %>
           <li><%= link_to 'ログイン', "/users/sign_in", class: "nav-list" %></li>
