--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,8 +30,33 @@
     <% if user_signed_in? %>
       <% if current_user == @post.user %>
         <%= link_to "編集", edit_post_path, class: "post-edit" %>
-        <%= link_to "削除", post_path, data: {turbo_method: :delete}, class:"post-destroy" %>
+        <%= link_to "削除", post_path, data: {turbo_confirm: "削除してもよろしいですか？", turbo_method: :delete}, class:"post-destroy" %>
       <% end %>
+    <% end %>
+  </div>
+
+  <div class="container">
+    <h2>＜コメント一覧＞</h2>
+    <div class="comments">
+      <% @comments.each do |comment| %>
+        <p>
+          <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}", class:"comment-name" %>：</strong>
+          <%= comment.text %>
+          <% if user_signed_in? && current_user.id == comment.user_id %>
+            <%= link_to "削除", post_comment_path(@post, comment), data: {turbo_confirm: "削除してもよろしいですか？", turbo_method: :delete}, class:"comment-destroy" %>
+          <% end %>
+        </p>
+      <% end %>
+    </div>
+    <% if user_signed_in? %>
+      <%= form_with(model: [@post, @comment], local: true) do |form| %>
+        <%= form.text_area :text, class:"comment-text", placeholder: "コメントする" %>
+        <%= form.submit "投稿する", class:"comment-post-btn" %>
+      <% end %>
+    <% else %>
+      <strong>
+        <p>※※※ コメントの投稿には<%= link_to "新規登録", "/users/sign_up" %>/<%= link_to "ログイン", "/users/sign_in" %>が必要です ※※※</p>
+      </strong>
     <% end %>
   </div>
 </div>
