ボタンのアニメーション実装

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -40,7 +40,7 @@
   </div>
 
   <div class="registration">
-    <%= f.submit "新規登録",class:"registration-btn" %>
+    <%= f.submit "新規登録",class:"registration-btn", id:"button" %>
   </div>
 </div>
 <% end %>
