--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,7 +19,7 @@
   <div class='post-contents'>
     <h1 class='title'>募集一覧</h1>
     <div class='new-solicitation'>
-      <%= link_to new_post_path, class:"solicitation-btn" do %>
+      <%= link_to new_post_path, class:"solicitation-btn", id:"button" do %>
         <span class='btn-text'>新規募集する</span>
       <% end %>
     </div>
