--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -24,8 +24,8 @@
   </div>
 
   <div class="post">
-    <%= f.submit "投稿する",class:"post-btn" %>
-    <%=link_to 'もどる', root_path, class:"back-btn" %>
+    <%= f.submit "投稿する",class:"post-btn", id:"button" %>
+    <%=link_to 'もどる', root_path, class:"back-btn", id:"button" %>
   </div>
 </div>
 <% end %>
