--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -24,8 +24,8 @@
   </div>
 
   <div class="post">
-    <%= f.submit "変更する",class:"post-btn" %>
-    <%=link_to 'もどる', post_path, class:"back-btn" %>
+    <%= f.submit "変更する",class:"post-btn", id:"button" %>
+    <%=link_to 'もどる', post_path, class:"back-btn", id:"button" %>
   </div>
 </div>
 <% end %>
