ヘッダーのアニメーション実装

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
   <div class='header-contents'>
     <div class='logo'>
-      <%= link_to 'Soliciting of Agents', root_path %>
+      <%= link_to 'Soliciting of Agents', root_path, id:"logo" %>
     </div>
     <div class='nav'>
       <ul class='nav-lists'>
