--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -23,6 +23,29 @@
 .nav-list {
   text-decoration: none;
   color: white;
-  margin-right: 50px;
+  padding:20px 30px;
   font-weight: bold;
+  position: relative;
+}
+
+.nav-list::after {
+  content: '';
+  /*絶対配置で線の位置を決める*/
+  position: absolute;
+  bottom: 0;
+  left: 10%;
+  /*線の形状*/
+  width: 80%;
+  height: 4px;
+  border-radius: 3px;
+  background:rgb(254, 70, 85);
+  /*アニメーションの指定*/
+  transition: all .3s;
+  transform: scale(0, 1);
+  transform-origin: center top;
+}
+
+/*現在地とhoverの設定*/
+.nav-list:hover::after {
+  transform: scale(1, 1);
 }
