--- a/app/assets/stylesheets/user/session.css
+++ b/app/assets/stylesheets/user/session.css
@@ -1,6 +1,7 @@
 .session {
-  width: 60%;
-  margin: 0 auto;
+  width: 90%;
+  max-width: 700px;
+  margin: 50px auto 0;
 }
 
 .session-btn {
@@ -11,5 +12,4 @@
   line-height: 48px;
   font-size: 14px;
   cursor: pointer;
-  margin-top: 50px;
 }
