--- a/app/assets/stylesheets/posts/new.css
+++ b/app/assets/stylesheets/posts/new.css
@@ -1,7 +1,12 @@
 .post-form {
-  width: 50%;
-  min-width: 500px;
+  width: 100%;
   padding-bottom: 70px;
+}
+
+.game-mode {
+  width: 90%;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 .select-box {
@@ -12,7 +17,9 @@
 }
 
 .content-form {
-  margin-top: 40px;
+  width: 90%;
+  max-width: 900px;
+  margin: 40px auto 0;
 }
 
 .content-text {
@@ -27,13 +34,14 @@
 }
 
 .post {
-  width: 50%;
+  width: 90%;
   margin: 0 auto;
   text-align: center;
 }
 
 .post-btn {
   width: 100%;
+  max-width: 900px;
   background-color: rgb(254, 70, 85);
   border: 1px solid rgb(254, 70, 85);
   color: #fff;
@@ -44,10 +52,14 @@
 }
 
 .back-btn {
+  display: block;
+  width: 60%;
+  max-width: 540px;
+  line-height: 48px;
+  margin: 0 auto;
   background-color: grey;
   border: 1px solid gray;
   color: #fff;
   font-size: 14px;
-  padding: 15px 35%;
   text-decoration: none;
 }
