--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
     <h2 class='form-header-text'>投稿内容の詳細</h2>
   </div>
 
-  <div class="item-box">
+  <div class="post-box">
     <table class="detail-table">
       <tbody>
         <tr>
